# terrain_parser

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  README_CN.md
.claude/: settings.local.json
examples/: debug_terrain.rs  parse_mesh.rs  test_syntax.rs
examples/viewer/: 5.terrain  index.html
src/: error.rs  extention.rs  header.rs  lib.rs  mesh.rs  tools.rs  vertex.rs  wasm.rs
test-node/: parse_extension.js  test2.js
