[package]
name = "terrain_parser"
version = "0.1.0"
edition = "2024"
description = "A Rust library for parsing Cesium quantized-mesh terrain files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruierzhao/terrain_parser"
keywords = ["cesium", "terrain", "mesh", "quantized", "3d", "gis"]
categories = ["science", "game-engines", "parsing"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5"
thiserror = "2.0"
log = "0.4"
bytemuck = "1.15"
flate2 = "*"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 3           # 最高优化
lto = "thin"           # 链接时优化
codegen-units = 1      # 减少代码生成单元以提高优化
panic = "abort"        # 发生 panic 时直接终止程序
strip = true           # 移除符号信息
debug = false          # 不包含调试信息

[[bin]]
name = "terrain_info"
path = "src/bin/terrain-parser.rs"
